force-app/main/default/objects/Teacher__c/fields/Avg_fees_from_student__c.field-meta.xml
<CustomField>
    <fullName>Avg_fees_from_student__c</fullName>
    <formula>Salary__c   /  No_of_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fees Per Student</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>