force-app/main/default/objects/Teacher__c/fields/Subject_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Subject_Expertise__c</fullName>
    <label>Subject Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts</fullName>
                <default>true</default>
                <label>Arts</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>