force-app/main/default/objects/Teacher__c/validationRules/Date_of_Joining_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Joining_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(WEEKDAY( Date_Of_Joining__c ) = 1,WEEKDAY( Date_Of_Joining__c ) = 7)</errorConditionFormula>
    <errorDisplayField>Date_Of_Joining__c</errorDisplayField>
    <errorMessage>Date of Joining can&apos;t be on Weekend</errorMessage>
</ValidationRule>